# ferris-badge

./: Cargo.toml  README.md
.cargo/: config.toml
board/: cuddlyferris-pcb-80mm-kicad.kicad_mod  cuddlyferris-pcb2.kicad_mod  cuddlyferris-pcb3.kicad_mod  cuddlyferris-pcb4.kicad_mod  cuddlyferris-pcb5.kicad_mod  cuddlyferris-pcb6.kicad_mod  ferris-top-pos.csv  ferris.csv  ferris.kicad_pcb  ferris.kicad_prl  ferris.kicad_pro  ferris.kicad_sch
board/gerber/: ferris-B_Cu.gbr  ferris-B_Mask.gbr  ferris-B_Paste.gbr  ferris-B_Silkscreen.gbr  ferris-Edge_Cuts.gbr  ferris-F_Cu.gbr  ferris-F_Mask.gbr  ferris-F_Paste.gbr  ferris-F_Silkscreen.gbr  ferris-NPTH.drl  ferris-PTH.drl  ferris-job.gbrjob
firmware/: Cargo.toml
src/: button.rs  eye.rs  main.rs
