[package]
name = "ferris-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32l031g6", "time-driver-tim2", "exti", "memory-x", "low-power"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
#embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-storage = "0.3.1"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
embedded-hal = "1.0.0"
static_cell = { version = "2.1" }
portable-atomic = { version = "1.10", features = ["unsafe-assume-single-core"] }

[profile.release]
debug = false
lto = true
opt-level = "s"
incremental = false
codegen-units = 1

# [patch.crates-io]
# embassy-stm32 = { git = 'https://github.com/embassy-rs/embassy.git' }
# embassy-sync = { git = 'https://github.com/embassy-rs/embassy.git' }
# embassy-executor = { git = 'https://github.com/embassy-rs/embassy.git' }
# embassy-time = { git = 'https://github.com/embassy-rs/embassy.git' }
# embassy-time-driver = { git = 'https://github.com/embassy-rs/embassy.git' }
